--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -21,14 +21,14 @@ body {
 /* Títulos */
 h1 {
   font-weight: 700;
-  font-size: 2.5rem;
+  font-size: 2rem;
   margin-bottom: 1rem;
   color: #222;
 }
 
 h3 {
-  font-size: 1.25rem;
-  margin: 0.5rem 0;
+  font-size: 1rem;
+  margin: 1rem 0 0.5rem 0;
   color: #444;
 }
 
